<resources>
    <string name="app_name" translatable="false">Seller Sync</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_username">Forgot Username?</string>
    <string name="company_name">Company name</string>
    <string name="email" translatable="false">Email</string>
    <string name="re_password">Re-Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">Main</string>
    <string name="thankyou">\"Thank you for becoming a SellerSync user!\"</string>
    <string name="about_intro">"\t"Your business is sure to benefit from the use of this incredibly helpful software. Feel free to read on and learn more about SellerSync and the many advantages to implementing it as your Multi-Channel Inventory Business Software.</string>
    <string name="what_is_sellersync">What is SellerSync ?</string>
    <string name="about_sellersync">"\t"As previously mentioned, SellerSync is a Multi-Channel Inventory Business Software. In case you are unfamiliar with this term, that just means that it is a software that helps individuals and companies conduct business across many online selling sites. "\n""\n""\t"SellerSync works with web services such as Amazon, Ebay, Etsy, Shopify and Rakuten just to name a few, in a way that disperses business product listings to magnify selling exposure while at the same time automatically updating and synchronizing client inventory.</string>
    <string name="why_choose_sellersync">Why Choose SellerSync ?</string>
    <string name="why_choose">"\t"SellerSync is not the first of it\'s kind to offer the services it does; however, it is -by objective comparison- one of the very best options when it comes to choosing a provider of those services. SellerSync differs from it\'s competitors in several ways. "\n""\n""\t"One difference is that SellerSync is purchased one time, for a comparatively small fee, whereas other similar services bill their clients monthly. SellerSync also includes all of it\'s features with each purchase. "\n""\n""\t"Another difference is that SellerSync puts clients in charge of all their own business data. While clients must host their own data, they can be sure that the inventory and employee information are protected from everyone in the way they feel is best.</string>
    <string name="sellersync_commitment_and_ambition">SellerSync\'s Commitment and Ambition</string>
    <string name="about_comm_amb">"\t"The SellerSync software is constantly improving and growing to cover more ground in order to help businesses and individuals succeed in many different areas. SellerSync aims to grow and become a standout suite of business software that allows much easier access to tools as well as simpler solutions to constant business obstacles. "\n""\n""\t"SellerSync was created for business by business (one entrepreneur to be exact). Because it\'s being used and developed by one and the same, users can rest assured that this software will work for them.</string>
    <string name="share_how_you_feel_about_sellersync">Share how you feel about SellerSync</string>
    <string name="please_share_any_concerns_tips_and_especially_ideas_for_improvement">Please share any concerns, tips, and especially ideas for improvement.</string>
    <string name="share_your_thoughts">Share your thoughts</string>
    <string name="this_app_is_useful">This app is useful.</string>
    <string name="definitely">Definitely</string>
    <string name="maybe">Maybe</string>
    <string name="not_at_all">Not at all</string>
    <string name="this_app_needs_improvement">This app needs improvement.</string>
    <string name="i_will_use_this_app_again">I will use this app again.</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="send_feedback">Send</string>
    <string name="feedbackEmail" translatable="false">jantzillac.93@gmail.com</string>
    <string name="seller_sync_feedback">SellerSync Feedback</string>
    <string name="user_says">This user says:</string>
    <string name="useful_D">This user Definitely thinks this app is useful =</string>
    <string name="useful_M">This user Maybe thinks this app is useful =</string>
    <string name="useful_N">This user Does Not think this app is useful =</string>
    <string name="imp_D">This user Definitely thinks this app needs improvement =</string>
    <string name="imp_M">This user Maybe thinks this app needs improvement =</string>
    <string name="imp_N">This user Does Not think this app needs improvement =</string>
    <string name="use_D">This user Definitely will use this app again =</string>
    <string name="use_M">This user Maybe will use this app again =</string>
    <string name="use_N">This user Will Not use this app again =</string>
    <string name="user_gave_star_num">This user gave you</string>
    <string name="stars">Stars.</string>
    <string name="btnnew">New</string>
    <string name="btnrestock">Restock</string>
    <string name="what_product">What kind of product?</string>
    <string name="new_product">New Product</string>
    <string name="restock">Restock</string>
    <string name="new_listing">New Listing</string>
    <string name="sales">Sales</string>
    <string name="shipping">Shipping</string>
    <string name="product_name">Product Name</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="upc" translatable="false">UPC</string>
    <string name="enter_upc">Enter UPC</string>
    <string name="sku" translatable="false">SKU</string>
    <string name="enter_sku">Enter SKU</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="enter_purchase_price">Enter Purchase Price</string>
    <string name="retail_price">Retail Price</string>
    <string name="enter_retail_price">Enter Retail Price</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter Added Quantity</string>
    <string name="add_product">Add Product</string>
    <string name="where_do_you_want_to_list">Where do you want to list?</string>
    <string name="my_selling_channels">My Selling Channels</string>
    <string name="optional">(Optional)</string>
    <string name="set_up_a_new_selling_channel">Set up a new selling channel</string>
    <string name="choose_a_username_to_reset">Choose a username to reset.</string>
    <string name="choose_a_password_to_reset">Choose a password to reset.</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="reminders">Reminders</string>
    <string name="Communication">Communication</string>
    <string name="Settings">Settings</string>
    <string name="Upload">Upload</string>
    <string name="Reports">Reports</string>
    <string name="Other">Other</string>
    <string name="Help">Help</string>
    <string name="Feedback">Feedback</string>
    <string name="About">About</string>
    <string name="Tools">Tools</string>
    <string name="returns">Returns</string>
    <string name="purchases">Purchases</string>
    <string name="summary">Summary</string>
    <string name="inventory">Inventory</string>
    <string name="listings">Listings</string>
    <string name="activity">Activity</string>
    <string name="welcome">Welcome to SellerSync</string>
    <string name="confirm_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tap_back_again_to_exit">Tap back button again to exit.</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="no_auth_access_reports">You are not authorized to access reports</string>
    <string name="no_auth_access_uploads">You are not authorized to upload files</string>
    <string name="add">Add</string>
    <string name="add_new_reminder">Add New Reminder</string>
    <string name="remind_me_to">Remind me to...</string>
    <string name="please_set_to_future">Please set your reminder to a future time.</string>
    <string name="please_choose_different_time">You already have a reminder set for this time. Please choose another time.</string>
    <string name="please_choose_different_reminder_name">already exists. Please choose another name for your reminder.</string>
    <string name="ok">Ok</string>
    <string name="please_enter_reminder_name">Please enter a name for your reminder.</string>
    <string name="cancel">Cancel</string>
    <string name="no_reminders">You currently have no reminders.</string>
    <string name="added_to_reminders">has been added to your reminders.</string>
    <string name="deleted_from_reminders">has been deleted from your reminders.</string>
    <string name="category">Category</string>
    <string name="search_listings">Search Listings</string>
    <string name="search_inventory">Search Inventory</string>
    <string name="search_activity">Search Activity</string>
    <string name="could_not_add_new_product">Could not add new product.</string>
    <string name="storing_new_product">Storing New Product Info</string>
    <string name="processing">Processing...</string>
    <string name="retry">Retry</string>
    <string name="upc_taken">This UPC is already in use.</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="no_connection_direction">SellerSync could not establish a internet connection. Make sure you are connected to a network and try again.</string>
    <string name="please_enter_or_create_upc">Please enter a UPC. If the product doesn\'t have a UPC, you can create one now.</string>
    <string name="please_enter_a_currency">Please enter a number with no more than 2 digits after the decimal.</string>
    <string name="inventory_list">Inventory List</string>
    <string name="product_desc">Product Description</string>
    <string name="user_info">User Info</string>
    <string name="user_action">User Action</string>
    <string name="how_do_I_add_product">how do I add product?</string>
    <string name="how_do_I_create_listing">how do I create a listing?</string>
    <string name="how_do_I_use_search_bar">how do I use the search bar?</string>
    <string name="how_to_set_up_selling_channel">how to set up a selling channel</string>
    <string name="how_to_create_new_listing">how to create a new listing</string>
    <string name="how_to_remove_listing">how to remove a listing</string>
    <string name="how_to_edit_listing">how to edit a listing</string>
    <string name="how_to_add_new_inventory">how to add new inventory</string>
    <string name="how_to_search_inventory">how to search inventory</string>
    <string name="how_to_edit_inventory">how to edit inventory</string>
    <string name="how_to_ship_product">how to ship a product</string>
    <string name="how_to_get_tracking">how to get tracking</string>
    <string name="how_to_compare_ship_costs">how to compare ship costs</string>
    <string name="how_to_setup_payment">how to set up payment options</string>
    <string name="how_to_initiate_a_purchase">how to initiate a purchase</string>
    <string name="how_to_schedule_purchase">how to schedule a purchase</string>
    <string name="how_to_create_a_reminder">how to create a reminder</string>
    <string name="submit">Submit</string>
    <string name="listing">Listing</string>
    <string name="purchasing">Purchasing</string>
    <string name="admin">Admin</string>
    <string name="user_permissions">User Permissions</string>
    <string name="add_list_products">Add List Of Products</string>
    <string name="search_users">Search Users</string>
</resources>