<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sellersync.jantz.sellersync.NewProductFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvAddProdList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_list_products"
            android:textStyle="bold"
            android:textSize="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"
            fontPath="fonts/avenir.ttf"
            tools:ignore="MissingPrefix"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:paddingLeft="4dp"
            android:textSize="16dp"
            android:textStyle="bold"
            fontPath="fonts/avenir.ttf"
            tools:ignore="MissingPrefix"/>
        <EditText
            android:id="@+id/etProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand_name"
            android:paddingLeft="4dp"
            android:textSize="16dp"
            android:textStyle="bold"
            fontPath="fonts/avenir.ttf"
            tools:ignore="MissingPrefix"/>
        <EditText
            android:id="@+id/etBrandName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_brand_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upc"
            android:paddingLeft="4dp"
            android:textSize="16dp"
            android:textStyle="bold"
            fontPath="fonts/avenir.ttf"
            tools:ignore="MissingPrefix"/>
        <EditText
            android:id="@+id/etUPC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_upc"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sku"
            android:paddingLeft="4dp"
            android:textSize="16dp"
            android:textStyle="bold"
            fontPath="fonts/avenir.ttf"
            tools:ignore="MissingPrefix"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optional"
            android:paddingLeft="4dp" />
        </LinearLayout>
        <EditText
            android:id="@+id/etSKU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_sku"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_price"
            android:paddingLeft="4dp"
            android:textSize="16dp"
            android:textStyle="bold"
            fontPath="fonts/avenir.ttf"
            tools:ignore="MissingPrefix"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optional"
            android:paddingLeft="4dp"/>
        </LinearLayout>
        <EditText
            android:id="@+id/etPurchPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/enter_purchase_price"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retail_price"
            android:paddingLeft="4dp"
            android:textSize="16dp"
            android:textStyle="bold"
            fontPath="fonts/avenir.ttf"
            tools:ignore="MissingPrefix"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optional"
                android:paddingLeft="4dp" />
        </LinearLayout>
        <EditText
            android:id="@+id/etRetailPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/enter_retail_price"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:paddingLeft="4dp"
            android:textSize="16dp"
            android:textStyle="bold"
            fontPath="fonts/avenir.ttf"
            tools:ignore="MissingPrefix"/>
        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/enter_quantity"/>

            <TextView
                android:id="@+id/tvAnotherProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Add Another Product"
                android:textStyle="bold"
                android:textSize="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                fontPath="fonts/avenir.ttf"
                tools:ignore="MissingPrefix"/>

        <Button
            android:id="@+id/btnAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_product"
            android:textStyle="bold"
            android:textSize="18dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:layout_marginBottom="16dp"
            fontPath="fonts/avenir.ttf"
            tools:ignore="MissingPrefix"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
