<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sellersync.jantz.sellersync.NewProductFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_users"/>
        <ListView
            android:id="@+id/lvUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textSize="2px"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_permissions"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            fontPath="fonts/avenir.ttf"
            tools:ignore="MissingPrefix"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp">
            <CheckBox
                android:id="@+id/cbListing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listing"/>
            <CheckBox
                android:id="@+id/cbInventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inventory"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"/>
            <CheckBox
                android:id="@+id/cbShipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shipping"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <CheckBox
                android:id="@+id/cbPurchasing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchasing"/>
            <CheckBox
                android:id="@+id/cbReturns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/returns"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"/>
            <CheckBox
                android:id="@+id/cbAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin"/>
        </LinearLayout>
        <Button
            android:layout_marginTop="32dp"
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textSize="18dp"
            android:textStyle="bold"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:layout_marginBottom="16dp"
            fontPath="fonts/avenir.ttf"
            tools:ignore="MissingPrefix"/>
    </LinearLayout>
</RelativeLayout>
